# oslo.policy

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: api.rst  conf.py  index.rst  installation.rst  sphinxpolicygen.rst  usage.rst
doc/source/admin/: index.rst  policy-json-file.rst  policy-yaml-file.rst
doc/source/cli/: index.rst  oslopolicy-checker.rst  oslopolicy-convert-json-to-yaml.rst  oslopolicy-list-redundant.rst  oslopolicy-policy-generator.rst  oslopolicy-sample-generator.rst  oslopolicy-validator.rst
doc/source/cli/common/: convert-opts.rst  default-opts.rst  enforcer-opts.rst  generator-opts.rst  rule-opts.rst
doc/source/configuration/: index.rst
doc/source/install/: index.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst  plugins.rst  sphinxpolicygen.rst  usage.rst
oslo.policy/locale/: oslo.policy-log-critical.pot  oslo.policy-log-error.pot  oslo.policy-log-info.pot  oslo.policy.pot
oslo_policy/: _cache_handler.py  _checks.py  _external.py  _i18n.py  _parser.py  fixture.py  generator.py  opts.py  policy.py  shell.py  sphinxext.py  sphinxpolicygen.py  version.py
oslo_policy/locale/: oslo_policy-log-error.pot  oslo_policy.pot
oslo_policy/locale/ar/LC_MESSAGES/: oslo_policy-log-error.po
oslo_policy/locale/cs/LC_MESSAGES/: oslo_policy-log-error.po  oslo_policy.po
oslo_policy/locale/de/LC_MESSAGES/: oslo_policy-log-error.po  oslo_policy.po
oslo_policy/locale/en_AU/LC_MESSAGES/: oslo_policy-log-error.po
oslo_policy/locale/en_GB/LC_MESSAGES/: oslo_policy-log-error.po  oslo_policy.po
oslo_policy/locale/es/LC_MESSAGES/: oslo_policy-log-error.po  oslo_policy.po
oslo_policy/locale/fr/LC_MESSAGES/: oslo_policy-log-error.po  oslo_policy.po
oslo_policy/locale/it/LC_MESSAGES/: oslo_policy-log-error.po  oslo_policy.po
oslo_policy/locale/ja/LC_MESSAGES/: oslo_policy-log-error.po  oslo_policy.po
oslo_policy/locale/ko_KR/LC_MESSAGES/: oslo_policy-log-error.po  oslo_policy.po
oslo_policy/locale/pt/LC_MESSAGES/: oslo_policy-log-error.po
oslo_policy/locale/pt_BR/LC_MESSAGES/: oslo_policy-log-error.po  oslo_policy.po
oslo_policy/locale/ru/LC_MESSAGES/: oslo_policy.po
oslo_policy/locale/tr_TR/LC_MESSAGES/: oslo_policy-log-error.po  oslo_policy.po
oslo_policy/locale/vi_VN/LC_MESSAGES/: oslo_policy-log-error.po
oslo_policy/locale/zh_CN/LC_MESSAGES/: oslo_policy-log-error.po  oslo_policy.po
oslo_policy/locale/zh_TW/LC_MESSAGES/: oslo_policy-log-error.po  oslo_policy.po
oslo_policy/openstack/common/: _i18n.py  lockutils.py  log.py
oslo_policy/openstack/common/fixture/: lockutils.py
oslo_policy/tests/: base.py  test_cache_handler.py  test_checks.py  test_external.py  test_fixtures.py  test_generator.py  test_opts.py  test_parser.py  test_policy.py  test_shell.py  test_sphinxext.py  test_sphinxpolicygen.py  token_fixture.py
releasenotes/notes/: Fix-map-system-scope-for-creds-dict-e4cbec2f7495f22e.yaml  add-deprecated-metadata-to-DeprecatedRule-79d2e8a3f5d11743.yaml  add-policy-convert-json-to-yaml-tool-3c93604aee79f58a.yaml  bug-1880959-8f1370a59759d40d.yaml  bug-1913718-f1b46bbff3231d98.yaml  bug-1943584-fc74f9205039883c.yaml  deprecate-policy-file-json-format-e1921f15b5d00287.yaml  deprecate-version-module-458bb95ca17e6953.yaml  drop-py38-e6f497fd0af1dbe1.yaml  enforce-scope-checks-always-when-rule-has-scope_types-8f983cdf70766e4f.yaml  enforce_new_defaults-6ae17d8b8d166a2c.yaml  enforce_scope_new_defaults-aaf134e5409ae7f2.yaml  fix-bug-1914095-fa71d81c9639ba94.yaml  fix-deprecated-rule-handling-c6fe321fce6293a9.yaml  fix-passing-exclude-deprecated-param-317745d23022e544.yaml  list-redundant-deprecation-warnings-f84a06133efdaedd.yaml  policy-file-validator-906d5cff864a2d51.yaml  policy-yaml-by-default-8c88efb7f5db14d1.yaml  remove-default-section-fallback-d1485959653438b6.yaml  remove-enforce-scope-flag-1c3e886a31fc9b66.yaml  remove-json-format-support-e6a32981dff45139.yaml  requests-timeout-fbd57c7a4fdd908f.yaml
releasenotes/source/: conf.py  index.rst
releasenotes/source/locale/en_GB/LC_MESSAGES/: releasenotes.po
sample_data/: auth_v3_token_system_admin.json
