[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "oslo.policy"
description = "Oslo Policy library"
readme = "README.rst"
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
requires-python = ">=3.10"
classifiers = [
    "Environment :: OpenStack",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://docs.openstack.org/oslo.policy"
Repository = "https://opendev.org/openstack/oslo.policy"

[project.scripts]
oslopolicy-checker = "oslo_policy.shell:main"
oslopolicy-sample-generator = "oslo_policy.generator:generate_sample"
oslopolicy-policy-generator = "oslo_policy.generator:generate_policy"
oslopolicy-list-redundant = "oslo_policy.generator:list_redundant"
oslopolicy-policy-upgrade = "oslo_policy.generator:upgrade_policy"
oslopolicy-validator = "oslo_policy.generator:validate_policy"
oslopolicy-convert-json-to-yaml = "oslo_policy.generator:convert_policy_json_to_yaml"

[project.entry-points."oslo.config.opts"]
"oslo.policy" = "oslo_policy.opts:list_opts"

[project.entry-points."oslo.policy.rule_checks"]
http = "oslo_policy._external:HttpCheck"
https = "oslo_policy._external:HttpsCheck"

[tool.setuptools]
packages = ["oslo_policy"]
