[metadata]
name = oslo.policy
summary = Oslo Policy library
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://launchpad.net/oslo.policy
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    oslo_policy

[pbr]
warnerrors = true
autodoc_tree_index_modules = True

[entry_points]
oslo.config.opts =
    oslo.policy = oslo_policy.opts:list_opts

console_scripts =
    oslopolicy-checker = oslo_policy.shell:main
    oslopolicy-sample-generator = oslo_policy.generator:generate_sample
    oslopolicy-policy-generator = oslo_policy.generator:genarate_policy
    oslopolicy-list-redundant = oslo_policy.generator:list_redundant

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = oslo_policy/locale
domain = oslo_policy

[update_catalog]
domain = oslo_policy
output_dir = oslo_policy/locale
input_file = oslo_policy/locale/oslo_policy.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = oslo_policy/locale/oslo_policy.pot

[wheel]
universal = true
