[metadata]
name = oslo.policy
summary = Oslo Policy library
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/oslo.policy/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    oslo_policy

[entry_points]
oslo.config.opts =
    oslo.policy = oslo_policy.opts:list_opts

console_scripts =
    oslopolicy-checker = oslo_policy.shell:main
    oslopolicy-sample-generator = oslo_policy.generator:generate_sample
    oslopolicy-policy-generator = oslo_policy.generator:generate_policy
    oslopolicy-list-redundant = oslo_policy.generator:list_redundant
    oslopolicy-policy-upgrade = oslo_policy.generator:upgrade_policy

oslo.policy.rule_checks =
    http = oslo_policy._external:HttpCheck
    https = oslo_policy._external:HttpsCheck

[compile_catalog]
directory = oslo_policy/locale
domain = oslo_policy

[update_catalog]
domain = oslo_policy
output_dir = oslo_policy/locale
input_file = oslo_policy/locale/oslo_policy.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = oslo_policy/locale/oslo_policy.pot
