[metadata]
name = oslo.policy
summary = Oslo Policy library
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/oslo.policy/latest/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    oslo_policy

[entry_points]
oslo.config.opts =
    oslo.policy = oslo_policy.opts:list_opts

console_scripts =
    oslopolicy-checker = oslo_policy.shell:main
    oslopolicy-sample-generator = oslo_policy.generator:generate_sample
    oslopolicy-policy-generator = oslo_policy.generator:generate_policy
    oslopolicy-list-redundant = oslo_policy.generator:list_redundant
    oslopolicy-policy-upgrade = oslo_policy.generator:upgrade_policy
    oslopolicy-validator = oslo_policy.generator:validate_policy
    oslopolicy-convert-json-to-yaml = oslo_policy.generator:convert_policy_json_to_yaml

oslo.policy.rule_checks =
    http = oslo_policy._external:HttpCheck
    https = oslo_policy._external:HttpsCheck
